--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,8 @@
         "browsers": ["> 1%", "last 20 versions", "not ie <= 8"],
         "node": "current"
       },
-      "useBuiltIns": "usage"
+      "useBuiltIns": "usage",
+      "corejs": 3
     }]
   ],
   "plugins": ["@babel/plugin-transform-runtime"]
